--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ version = '1.0.0'
 
 war {
     manifest {
-        attributes 'Implementation-Title': 'Hanbit Team03 Project',
+        attributes 'Implementation-Title': 'Hanbit Scheduler',
                    'Implementation-Version': version
     }
 }
@@ -33,6 +33,8 @@ dependencies {
 	compile group: 'org.springframework', name: 'spring-jdbc', version: '4.3.2.RELEASE'
 	compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.2.RELEASE'
 
+	compile group: 'org.springframework.security', name: 'spring-security-crypto', version: '4.1.3.RELEASE'
+
 	compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.21'
 	compile group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.21'
 
@@ -46,6 +48,7 @@ dependencies {
 	providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.+'
+    testCompile group: 'org.springframework', name: 'spring-test', version: '4.3.2.RELEASE'
 }
 
 test {
